2020-05-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Name): Fix timestamps on Windows.

2020-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c: Center and clip the bitmap to fix resizing.

2020-05-28  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Stop double-dealing BackSpace, Tab, Return, and Esc.

	* graph/x11/grx11.c (gr_x11_surface_listen_event): Do not reset the
	cursor prematurely.

2020-05-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_init): Register WM_DELETE_WINDOW.
	(gr_x11_surface_listen_event): Handle it to exit gracefully.

2020-05-27  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (grX11Surface): Remove unused field.

2020-05-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Rework GDI message handling.

	* graph/win32/grwin32.c (WM_RESIZE): New custom message.
	(gr_win32_surface_listen_event): Simplify and handle keystroke events
	and window resizing here.
	(grWin32Surface): Remove no longer neccessary fields.
	(Message_Process): Handle WM_PAINT and post WN_RESIZE as needed.

2020-05-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grevents.c (grKey): Utilize some ASCII control codes.

2020-05-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Use size_t in memory allocations, handle zero-size bitmap.

	* graph/grblit.c, graph/grdevice.c, graph/grdevice.h,
	graph/x11/grx11.c: s/unsigned long/size_t/
	* graph/grobjs.h: Ditto and inclide <stdlib.h>
	* graph/grobjs.c (grAlloc): Ditto.
	(grNewBitmap): Handle zero height or width.

2020-05-25  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (grFillRect): Small bug.

2020-05-21  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Implement resizable GDI windows.

	* graph/win32/grwin32.c (gr_win32_surface_resize): Implement resizing.
	(Nessage_Process): Add WM_SIZE handling.
	(gr_win32_surface_init): Change window style and streamline.
