@@ -1,3 +1,15 @@
+2020-05-31  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[graph/win32] Miscellaneous clean-ups.
+
+	* graph/win32/grwin32.c
+	(gr_win32_surface_refresh_rect): Don't `UpdateWindow' and move
+	`ShowWindow' from here...
+	(gr_win32_surface_init): ... to here.
+	(gr_win32_surface_listen_event): Make sure size really changes and
+	move `SetWindowText' from here...
+	(gr_win32_surface_set_title): ...to here.
+
 2020-05-29  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	* src/ftdump.c (Print_Name): Fix timestamps on Windows.
